[gd_scene load_steps=9 format=3 uid="uid://bh1h73g5kfkgt"]

[ext_resource type="Script" uid="uid://n8ngttljdf7a" path="res://background.gd" id="1_background"]
[ext_resource type="Script" uid="uid://bmnmewmpv106e" path="res://menu.gd" id="2_menu"]
[ext_resource type="Texture2D" uid="uid://oey3sh2fq65q" path="res://logomenu.png" id="3_4hy44"]
[ext_resource type="Script" uid="uid://ck4f1qen8kq80" path="res://logomenu.gd" id="4_ytr4m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(1, 0.7, 0.85, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.9, 0.4, 0.7, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.9, 0.6, 0.75, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.7, 0.2, 0.5, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(1, 0.8, 0.9, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.3, 0.6, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_focus"]
bg_color = Color(1, 0.8, 0.9, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.3, 0.6, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="menu" type="Node2D"]
position = Vector2(640, 360)
script = ExtResource("2_menu")

[node name="background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("1_background")

[node name="PlayButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 60)
offset_left = 150.0
offset_top = 50.0
offset_right = 450.0
offset_bottom = 110.0
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "JOGAR"

[node name="OptionsButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 60)
offset_left = 150.0
offset_top = 120.0
offset_right = 450.0
offset_bottom = 180.0
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "OPÇÕES"

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 60)
offset_left = 150.0
offset_top = 190.0
offset_right = 450.0
offset_bottom = 250.0
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "SAIR"

[node name="Logomenu" type="Sprite2D" parent="."]
position = Vector2(-294, -60)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_4hy44")
script = ExtResource("4_ytr4m")

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_button_mouse_entered" binds= [NodePath("MenuContainer/PlayButton")]]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_button_mouse_exited" binds= [NodePath("MenuContainer/PlayButton")]]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="OptionsButton" to="." method="_on_button_mouse_entered" binds= [NodePath("MenuContainer/OptionsButton")]]
[connection signal="mouse_exited" from="OptionsButton" to="." method="_on_button_mouse_exited" binds= [NodePath("MenuContainer/OptionsButton")]]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_button_mouse_entered" binds= [NodePath("MenuContainer/ExitButton")]]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_button_mouse_exited" binds= [NodePath("MenuContainer/ExitButton")]]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
